style.css
@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");

* {
    margin: 0;
    padding: 0;
    font-size: 16px;
    text-align: center;
    font-weight: 500;
    text-decoration: 0;
    box-sizing: border-box;
    transition: all ease 0.2s;
    font-family: "Red Hat Display", sans-serif;
}

/* colors */
:root {
    /* primary */
    --pale-blue: hsla(225, 100%, 94%, 0.959);
    --bright-blue: hsl(245, 75%, 52%);
    /* neutral */
    --dark-blue: hsl(223, 47%, 23%);
    --very-pale-blue: hsl(225, 100%, 98%);
    --desaturated-blue: hsl(224, 23%, 55%);
}

html,
body {
    height: 100%;
}

body {
    background-repeat: no-repeat;
    background-color: var(--pale-blue);
    background-image: url(./images/pattern-background-mobile.svg);
}

/* Class for manage component structure */
.box,
.row {
    display: flex;
}

.box {
    flex-direction: column;
}

.row {
    flex-direction: row;
}

/* ===================================== */

/* typography, button, link */
.light {
    opacity: 0.5;
}

.normal {
    font-weight: 700;
}

.bold {
    font-weight: 900;
}

h1 {
    font-size: x-large;
}

a, .btn-a {
    border: none;
    background: none;
    color: var(--bright-blue);
    text-decoration: underline;
}

a:hover, .btn-a:hover {
    opacity: 0.6;
    cursor: pointer;
    text-decoration: none;
}

.btn-submit {
    border: none;
    padding: .7rem;
    color: white;
    border-radius: 8px;
    background: var(--bright-blue);
}

.btn-submit:hover {
    opacity: 0.6;
    cursor: pointer;
    text-decoration: none;
}

.btn-cancel {
    border: none;
    background: none;
    color: rgb(0,0,0);
    opacity: 0.6;
}

.btn-cancel:hover {
    opacity: 1;
    cursor: pointer;
}

/* ===================================== */

.centered-container {
    height: inherit;
    align-items: center;
    justify-content: center;
}

.card-container {
    width: 450px;
}

.card-header {
    min-width: 100%;
    min-height: 220px;
    background-repeat: no-repeat;
    border-top-left-radius: 12px;
    border-top-right-radius: 12px;
    background-image: url(./images/illustration-hero.svg);
}

.card-content {
    gap: 1rem;
    padding: 10%;
    border-bottom-left-radius: 12px;
    border-bottom-right-radius: 12px;
    background-color: rgb(255, 255, 255);
}

.order-detail {
    gap: 1rem;
    padding: 1.5rem;
    position: relative;
    align-items: center;
    border-radius: 12px;
    background-color: hsla(225, 100%, 94%, 0.4);
}

.order-section#change {
    position: absolute;
    right: 2rem;
}

.attribution {
    bottom: 0;
    width: 100%;
    text-align: center;
    position: absolute;
}

@media (min-width: 376px) {
    body {
        background-image: url(./images/pattern-background-desktop.svg);
    }
}

